--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,8 +6,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Ubuntu,
+  font-family: Lato, BlinkMacSystemFont, Segoe UI, Roboto, Ubuntu,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: black;
 }
 
 a {
