--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@ body {
   font-family: Lato, BlinkMacSystemFont, Segoe UI, Roboto, Ubuntu,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   color: black;
+  font-size: 16px;
 }
 
 a {
@@ -18,4 +19,18 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.presentationContainerHomepage {
+  clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
+  padding: 17rem 20%;
+  height: 100%;
+}
+
+@media  (min-width: 640px) {
+  .presentationContainerHomepage {
+    clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
+    padding: 11rem 20%;
+    height: 100%;
+  }
 }
