--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,8 +6,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Lato, BlinkMacSystemFont, Segoe UI, Roboto, Ubuntu,
-    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Lato, BlinkMacSystemFont, Segoe UI, Roboto, Ubuntu, Fira Sans,
+    Droid Sans, Helvetica Neue, sans-serif;
   color: black;
   font-size: 16px;
 }
@@ -27,7 +27,7 @@ a {
   height: 100%;
 }
 
-@media  (min-width: 640px) {
+@media (min-width: 640px) {
   .presentationContainerHomepage {
     clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
     padding: 11rem 20%;
@@ -102,11 +102,31 @@ a {
   width: 62.5%;
   height: 100%;
   pointer-events: none;
-  background: -moz-linear-gradient(55deg, rgba(0, 0, 0, 0) 61%, rgba(242, 245, 248, 0.15) 61%);
-  background: -webkit-linear-gradient(36deg, rgba(0, 0, 0, 0) 61%, rgba(242, 245, 248, 0.15) 61%);
-  background: -o-linear-gradient(55deg, rgba(0, 0, 0, 0) 61%, rgba(242, 245, 248, 0.15) 61%);
-  background: -ms-linear-gradient(55deg, rgba(0, 0, 0, 0) 61%, rgba(242, 245, 248, 0.15) 61%);
-  background: linear-gradient(55deg, rgba(0, 0, 0, 0) 61%, rgba(242, 245, 248, 0.15) 61%);
+  background: -moz-linear-gradient(
+    55deg,
+    rgba(0, 0, 0, 0) 61%,
+    rgba(242, 245, 248, 0.15) 61%
+  );
+  background: -webkit-linear-gradient(
+    36deg,
+    rgba(0, 0, 0, 0) 61%,
+    rgba(242, 245, 248, 0.15) 61%
+  );
+  background: -o-linear-gradient(
+    55deg,
+    rgba(0, 0, 0, 0) 61%,
+    rgba(242, 245, 248, 0.15) 61%
+  );
+  background: -ms-linear-gradient(
+    55deg,
+    rgba(0, 0, 0, 0) 61%,
+    rgba(242, 245, 248, 0.15) 61%
+  );
+  background: linear-gradient(
+    55deg,
+    rgba(0, 0, 0, 0) 61%,
+    rgba(242, 245, 248, 0.15) 61%
+  );
   background-blend-mode: screen;
   -webkit-border-top-right-radius: 3.5% 3%;
   -moz-border-radius-toptight: 3.5% 3%;
@@ -116,8 +136,8 @@ a {
   display: block;
 }
 .mbp-display .display-edge .bezel .display-camera {
-  width: .62%;
-  height: .95%;
+  width: 0.62%;
+  height: 0.95%;
   margin: 1% auto;
   left: 0;
   right: 0;
@@ -161,7 +181,7 @@ a {
   position: absolute;
   width: 100%;
   height: 4.9%;
-  bottom: .15%;
+  bottom: 0.15%;
   z-index: 3;
   background-color: #212121;
   border-bottom-right-radius: 2.5% 70%;
@@ -173,7 +193,7 @@ a {
   position: relative;
   width: 7.4%;
   height: 32%;
-  margin-top: .5%;
+  margin-top: 0.5%;
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -201,7 +221,37 @@ a {
   left: 0;
   right: 0;
   top: 0;
-  background: linear-gradient( 90deg, #68696b 0%, #757678 .15%, #a0a1a3 .3%, #cccdcf .5%, #e7e8ea .8%, #e8e9eb 1%, #dfe0e2 1.25%, #d1d2d4 1.5%, #adaeb0 2%, #a4a5a7 3%, #bbbdbf 4%, #e1e1e3 8%, #eaebed 15%, #e9eaec 25%, #e9eaec 75%, #eaebed 85%, #e1e1e3 92%, #bbbdbf 96%, #a4a5a7 97%, #adaeb0 98%, #d1d2d4 98.5%, #dfe0e2 98.75%, #e8e9eb 99%, #e7e8ea 99.2%, #cccdcf 99.5%, #a0a1a3 99.7%, #757678 99.85%, #68696b 100%);
+  background: linear-gradient(
+    90deg,
+    #68696b 0%,
+    #757678 0.15%,
+    #a0a1a3 0.3%,
+    #cccdcf 0.5%,
+    #e7e8ea 0.8%,
+    #e8e9eb 1%,
+    #dfe0e2 1.25%,
+    #d1d2d4 1.5%,
+    #adaeb0 2%,
+    #a4a5a7 3%,
+    #bbbdbf 4%,
+    #e1e1e3 8%,
+    #eaebed 15%,
+    #e9eaec 25%,
+    #e9eaec 75%,
+    #eaebed 85%,
+    #e1e1e3 92%,
+    #bbbdbf 96%,
+    #a4a5a7 97%,
+    #adaeb0 98%,
+    #d1d2d4 98.5%,
+    #dfe0e2 98.75%,
+    #e8e9eb 99%,
+    #e7e8ea 99.2%,
+    #cccdcf 99.5%,
+    #a0a1a3 99.7%,
+    #757678 99.85%,
+    #68696b 100%
+  );
   z-index: 100;
   border-radius: 1px;
   display: flex;
@@ -215,7 +265,19 @@ a {
   z-index: 101;
   border-radius: 0 0 0 20px;
   background-color: #c1c2c6;
-  background: linear-gradient(180deg, rgba(195, 198, 200, 0.5) 0%, rgba(199, 200, 204, 0.5) 60%, rgba(115, 125, 130, 0.4) 100%), radial-gradient(circle at right, rgba(189, 190, 193, 0.5) 0%, rgba(189, 190, 193, 0.5) 50%, rgba(166, 169, 172, 0.5) 80%, rgba(30, 34, 40, 0.75) 100%);
+  background: linear-gradient(
+      180deg,
+      rgba(195, 198, 200, 0.5) 0%,
+      rgba(199, 200, 204, 0.5) 60%,
+      rgba(115, 125, 130, 0.4) 100%
+    ),
+    radial-gradient(
+      circle at right,
+      rgba(189, 190, 193, 0.5) 0%,
+      rgba(189, 190, 193, 0.5) 50%,
+      rgba(166, 169, 172, 0.5) 80%,
+      rgba(30, 34, 40, 0.75) 100%
+    );
   background-blend-mode: darken;
 }
 .mbp-keyboard .opener-right {
@@ -225,7 +287,19 @@ a {
   z-index: 101;
   border-radius: 0 0 20px 0;
   background-color: #c1c2c6;
-  background: linear-gradient(180deg, rgba(195, 198, 200, 0.5) 0%, rgba(199, 200, 204, 0.5) 60%, rgba(115, 125, 130, 0.4) 100%), radial-gradient(circle at left, rgba(189, 190, 193, 0.5) 0%, rgba(189, 190, 193, 0.5) 50%, rgba(166, 169, 172, 0.5) 80%, rgba(30, 34, 40, 0.75) 100%);
+  background: linear-gradient(
+      180deg,
+      rgba(195, 198, 200, 0.5) 0%,
+      rgba(199, 200, 204, 0.5) 60%,
+      rgba(115, 125, 130, 0.4) 100%
+    ),
+    radial-gradient(
+      circle at left,
+      rgba(189, 190, 193, 0.5) 0%,
+      rgba(189, 190, 193, 0.5) 50%,
+      rgba(166, 169, 172, 0.5) 80%,
+      rgba(30, 34, 40, 0.75) 100%
+    );
   background-blend-mode: darken;
 }
 .mbp-keyboard .bottom-left {
@@ -235,7 +309,14 @@ a {
   height: 58%;
   top: 10%;
   z-index: 99;
-  background: linear-gradient(180deg, #e5e6e9 0%, #909193 65%, #4e4f51 90%, #323234 96%, #29292b 100%);
+  background: linear-gradient(
+    180deg,
+    #e5e6e9 0%,
+    #909193 65%,
+    #4e4f51 90%,
+    #323234 96%,
+    #29292b 100%
+  );
   border-bottom-left-radius: 25% 60%;
 }
 .mbp-keyboard .bottom-right {
@@ -245,14 +326,21 @@ a {
   height: 58%;
   top: 10%;
   z-index: 99;
-  background: linear-gradient(180deg, #e5e6e9 0%, #909193 65%, #4e4f51 90%, #323234 96%, #29292b 100%);
+  background: linear-gradient(
+    180deg,
+    #e5e6e9 0%,
+    #909193 65%,
+    #4e4f51 90%,
+    #323234 96%,
+    #29292b 100%
+  );
   border-bottom-right-radius: 25% 60%;
 }
 .mbp-shadow {
   width: 95%;
   height: 60%;
   display: flex;
-  justify-content: center
+  justify-content: center;
 }
 .mbp-shadow .shadow-left {
   display: block;
@@ -261,7 +349,13 @@ a {
   height: 100%;
   top: 10%;
   z-index: 90;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(8, 11, 17, .85) 2.5%, rgba(29, 32, 36, .4) 15%, rgba(255, 255, 255, 0) 50%);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(8, 11, 17, 0.85) 2.5%,
+    rgba(29, 32, 36, 0.4) 15%,
+    rgba(255, 255, 255, 0) 50%
+  );
   filter: blur(2px);
   background-blend-mode: multiply;
   border-top-left-radius: 20% 90%;
@@ -273,9 +367,14 @@ a {
   height: 100%;
   top: 10%;
   z-index: 90;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(8, 11, 17, .85) 2.5%, rgba(29, 32, 36, .4) 15%, rgba(255, 255, 255, 0) 50%);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(8, 11, 17, 0.85) 2.5%,
+    rgba(29, 32, 36, 0.4) 15%,
+    rgba(255, 255, 255, 0) 50%
+  );
   filter: blur(2px);
   background-blend-mode: multiply;
   border-top-right-radius: 20% 90%;
 }
-
